many bug fixes and enhancements

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,12 @@ VITE_APP_DESCRIPTION="Professional Estate Planning Services"
 
 # Contact Information
 VITE_CONTACT_PHONE=(555) 123-4567
-VITE_CONTACT_EMAIL=info@generationcatalyst.com
+VITE_CONTACT_EMAIL=info@iamatrust.com
 VITE_CONTACT_ADDRESS="123 Legal Street, Estate City, ST 12345"
 
-# API Configuration (if needed in future)
-# VITE_API_URL=https://api.generationcatalyst.com
-# VITE_API_KEY=your-api-key-here
+# Email API (optional, for confirmations)
+# VITE_EMAIL_API_URL=https://your-endpoint.example.com/send
+# VITE_EMAIL_API_KEY=your-api-key-here
 
 # Analytics (if needed)
 # VITE_GOOGLE_ANALYTICS_ID=GA_MEASUREMENT_ID
