--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:server": "tsc --project tsconfig.server.json && find server -name '*.js' -exec sh -c 'mv \"$0\" \"${0%.js}.cjs\"' {} \\; && find shared -name '*.js' -exec sh -c 'mv \"$0\" \"${0%.js}.cjs\"' {} \\;",
-    "server": "npm run build:server && node server/index.cjs",
-    "server:dev": "npm run build:server && node server/index.cjs",
+    "build:server": "tsc --project tsconfig.server.json && find server -name '*.js' -exec sh -c 'cp \"$0\" \"${0%.js}.cjs\"' {} \\; && find shared -name '*.js' -exec sh -c 'cp \"$0\" \"${0%.js}.cjs\"' {} \\;",
+    "server": "npm run build:server && node server/index.js",
+    "server:dev": "npm run build:server && node server/index.js",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
@@ -27,7 +27,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "framer-motion": "^10.16.0",
@@ -50,6 +50,6 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^7.1.7"
   }
 }
