Convert backend to Vercel serverless functions - add auth API endpoints

--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/ws": "^8.18.1",
+    "@vercel/node": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
+    "cookie": "^0.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
