--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
