--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/ws": "^8.18.1",
+    "@vercel/mcp-adapter": "^1.0.0",
     "@vercel/node": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
