Fix Vercel deployment error - use correct Node.js runtime version
Changed @vercel/node@3.0.0 to @vercel/node@18 (invalid version format)
Changed runtime from @vercel/node@3.0.0 to nodejs18.x in functions config
This fixes the 'Function Runtimes must have a valid version' error

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     },
     {
       "src": "api/**/*.ts",
-      "use": "@vercel/node@3.0.0"
+      "use": "@vercel/node@18"
     }
   ],
   "routes": [
@@ -21,7 +21,7 @@
   ],
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node@3.0.0",
+      "runtime": "nodejs18.x",
       "memory": 1024,
       "maxDuration": 10
     }
