--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api" }
-  ],
   "functions": {
     "api/**/*.ts": {
       "runtime": "nodejs20.x",
