--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "vite",
   "functions": {
     "api/**/*.ts": {
-      "runtime": "nodejs20.x",
+      "runtime": "@vercel/node@3.0.0",
       "maxDuration": 10
     }
   }
