Add S3 document storage integration - Upload files to AWS S3 instead of local storage - Add S3 client configuration with signed URL downloads - Update document routes to use S3 - Add AWS SDK dependencies

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,10 @@ VITE_CONTACT_ADDRESS="123 Legal Street, Estate City, ST 12345"
 VITE_SOCIAL_LINKEDIN=https://linkedin.com/company/generation-catalyst
 VITE_SOCIAL_FACEBOOK=https://facebook.com/generation-catalyst
 VITE_SOCIAL_TWITTER=https://twitter.com/gen_catalyst
+
+
+# AWS S3 Configuration (for document storage)
+AWS_ACCESS_KEY_ID=your_access_key_id_here
+AWS_SECRET_ACCESS_KEY=your_secret_access_key_here
+AWS_S3_BUCKET_NAME=your-bucket-name
+AWS_REGION=us-east-1
