--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.926.0",
+    "@aws-sdk/lib-storage": "^3.926.0",
+    "@aws-sdk/s3-request-presigner": "^3.926.0",
     "@neondatabase/serverless": "^1.0.1",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
