--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/multiparty": "^4.2.1",
     "@types/nodemailer": "^7.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
@@ -46,6 +47,7 @@
     "framer-motion": "^10.16.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "multiparty": "^4.2.3",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
