Enhance Admin Dashboard and Fix Messaging System
- Redesigned Admin Dashboard with modern UI and icons.
- Added document counts and invoice status to user lists.
- Fixed messaging system with HTTP fallback and polling for reliability.
- Updated backend storage queries and API endpoints.
- Refactored environment variable handling.

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "functions": {
     "api/**/*.ts": {
       "runtime": "@vercel/node@5.5.0",
-      "maxDuration": 10
+      "maxDuration": 10,
+      "includeFiles": "shared/**"
     }
   },
   "rewrites": [
