Refactor: Consolidate backend to Vercel Serverless and modularize Admin Dashboard
- Refactored Admin Dashboard components (StatCard, UsersTable, etc.) for better modularity.
- Consolidated backend architecture by removing the Express 'server/' directory.
- Updated 'api/storage.ts' to use Drizzle ORM, matching the previous server implementation.
- Configured 'api/db.ts' for Vercel deployment.
- Updated 'src/services/api.ts' to use relative URLs for seamless Vercel integration.
- Updated 'vite.config.ts' and 'package.json' to support the new architecture.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vercel dev",
     "build": "tsc && vite build",
-    "build:server": "tsc --project tsconfig.server.json && find server -name '*.js' -exec sh -c 'cp \"$0\" \"${0%.js}.cjs\"' {} \\; && find shared -name '*.js' -exec sh -c 'cp \"$0\" \"${0%.js}.cjs\"' {} \\;",
-    "server": "npm run build:server && node server/index.js",
-    "server:dev": "npm run build:server && node server/index.js",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
