chore: remove build artifacts and update .gitignore
Removed TypeScript compilation outputs (.js, .cjs, .js.map) from tracking.
These are generated by 'npm run build:server' and should not be committed.

Updated .gitignore to prevent future commits of:
- server/**/*.js, *.cjs, *.js.map
- shared/**/*.js, *.cjs, *.js.map
- uploads/ directory
- cookies.txt and other debug artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,18 @@ coverage/
 # Vercel
 .vercel/
 .vercel
+
+# TypeScript build outputs in server/shared directories
+server/**/*.js
+server/**/*.cjs
+server/**/*.js.map
+shared/**/*.js
+shared/**/*.cjs
+shared/**/*.js.map
+
+# Upload directories (user uploads should not be tracked)
+uploads/
+
+# Debug/test artifacts
+cookies.txt
+*.txt.bak
