chore: clean up path aliases in build configs
- Remove @/types alias (directory removed)
- Remove @/assets alias (directory never existed)
- Add @/services alias (was missing but directory is used)

Both vite.config.ts and tsconfig.json updated to match.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,7 @@
       "@/pages/*": ["./src/pages/*"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/utils/*": ["./src/utils/*"],
-      "@/types/*": ["./src/types/*"],
-      "@/assets/*": ["./src/assets/*"],
+      "@/services/*": ["./src/services/*"],
       "@/styles/*": ["./src/styles/*"]
     }
   },
