--- a/package.json
+++ b/package.json
@@ -26,16 +26,10 @@
     "@vercel/node": "^2.3.0",
     "bcrypt": "^6.0.0",
     "cookie": "^1.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1",
     "framer-motion": "^10.16.0",
-    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
     "multiparty": "^4.2.3",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
@@ -44,24 +38,18 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "speakeasy": "^2.0.0",
-    "stripe": "^20.0.0",
-    "ws": "^8.18.3"
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cookie": "^0.6.0",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
     "@types/multiparty": "^4.2.1",
     "@types/nodemailer": "^7.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/speakeasy": "^2.0.10",
-    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
