chore: remove unused pg dependency, add AI assistant dirs to gitignore
- Remove pg package from dependencies (unused - project uses @neondatabase/serverless)
- Add .gemini/ and .serena/ to gitignore (development/AI assistant artifacts)

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ uploads/
 # Debug/test artifacts
 cookies.txt
 *.txt.bak
+
+# IDE/AI assistant directories (development artifacts)
+.gemini/
+.serena/
