docs: add missing server-side environment variables to .env.example
Document required configuration for:
- Server/frontend URLs
- Database connection (Neon PostgreSQL)
- JWT authentication secrets
- Stripe payment configuration
- SMTP email configuration

This helps developers set up the project correctly and ensures
production deployments have all necessary configuration.

--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,30 @@ VITE_SOCIAL_FACEBOOK=https://facebook.com/generation-catalyst
 VITE_SOCIAL_TWITTER=https://twitter.com/gen_catalyst
 
 
+# Server Configuration
+FRONTEND_URL=https://your-domain.com
+NODE_ENV=production
+
+# Database (Neon PostgreSQL)
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+
+# JWT Authentication (generate secure random strings)
+JWT_ACCESS_SECRET=your-secure-random-string-here
+JWT_REFRESH_SECRET=your-other-secure-random-string-here
+
 # AWS S3 Configuration (for document storage)
 AWS_ACCESS_KEY_ID=your_access_key_id_here
 AWS_SECRET_ACCESS_KEY=your_secret_access_key_here
 AWS_S3_BUCKET_NAME=your-bucket-name
 AWS_REGION=us-east-1
+
+# Stripe (for payments)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# SMTP Configuration (for email sending)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_USER=your-smtp-user
+# SMTP_PASS=your-smtp-password
+# SMTP_FROM=noreply@your-domain.com
